add client lib
